# storage/api-docs/api-docs.json
@@ -220,7 +220,7 @@
                         }
                     },
                     "422": {
-                        "description": "Bad request",
+                        "description": "Validation error",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -619,23 +619,23 @@
                                 "schema": {
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/components/schemas/Partner"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Invalid input data"
+                                            "properties": {
+                                                "name": {
+                                                    "description": "Full name of the partner",
+                                                    "type": "string"
+                                                },
+                                                "email": {
+                                                    "description": "Email address of the partner",
+                                                    "type": "string",
+                                                    "format": "email"
+                                                },
+                                                "commission": {
+                                                    "description": "Commission rate for the partner",
+                                                    "type": "number",
+                                                    "format": "float"
+                                                }
+                                            },
+                                            "type": "object"
                                         }
                                     },
                                     "type": "object"
@@ -650,22 +650,12 @@
                                 "schema": {
                                     "properties": {
                                         "message": {
-                                            "description": "Descriptive message about the validation errors",
                                             "type": "string",
-                                            "example": "Validation errors in your request"
+                                            "example": "Error messsage"
                                         },
                                         "errors": {
-                                            "description": "Detailed validation errors",
                                             "type": "object",
-                                            "additionalProperties": [
-                                                {
-                                                    "type": "array",
-                                                    "items": {
-                                                        "type": "string"
-                                                    },
-                                                    "property": null
-                                                }
-                                            ]
+                                            "example": "Object with all the errors by field"
                                         }
                                     },
                                     "type": "object"
@@ -703,7 +693,23 @@
                                 "schema": {
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/components/schemas/Partner"
+                                            "properties": {
+                                                "name": {
+                                                    "description": "Full name of the partner",
+                                                    "type": "string"
+                                                },
+                                                "email": {
+                                                    "description": "Email address of the partner",
+                                                    "type": "string",
+                                                    "format": "email"
+                                                },
+                                                "commission": {
+                                                    "description": "Commission rate for the partner",
+                                                    "type": "number",
+                                                    "format": "float"
+                                                }
+                                            },
+                                            "type": "object"
                                         }
                                     },
                                     "type": "object"
@@ -766,23 +772,23 @@
                                 "schema": {
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/components/schemas/Partner"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Invalid input data"
+                                            "properties": {
+                                                "name": {
+                                                    "description": "Full name of the partner",
+                                                    "type": "string"
+                                                },
+                                                "email": {
+                                                    "description": "Email address of the partner",
+                                                    "type": "string",
+                                                    "format": "email"
+                                                },
+                                                "commission": {
+                                                    "description": "Commission rate for the partner",
+                                                    "type": "number",
+                                                    "format": "float"
+                                                }
+                                            },
+                                            "type": "object"
                                         }
                                     },
                                     "type": "object"
@@ -813,22 +819,12 @@
                                 "schema": {
                                     "properties": {
                                         "message": {
-                                            "description": "Descriptive message about the validation errors",
                                             "type": "string",
-                                            "example": "Validation errors in your request"
+                                            "example": "Error messsage"
                                         },
                                         "errors": {
-                                            "description": "Detailed list of validation errors per field",
                                             "type": "object",
-                                            "additionalProperties": [
-                                                {
-                                                    "type": "array",
-                                                    "items": {
-                                                        "type": "string"
-                                                    },
-                                                    "property": null
-                                                }
-                                            ]
+                                            "example": "Object with all the errors by field"
                                         }
                                     },
                                     "type": "object"
@@ -1062,13 +1058,48 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Supplier"
+                                    "properties": {
+                                        "name": {
+                                            "description": "The name of the supplier",
+                                            "type": "string"
+                                        },
+                                        "email": {
+                                            "description": "The email address of the supplier",
+                                            "type": "string"
+                                        },
+                                        "max_due_days": {
+                                            "description": "The maximum number of due days allowed for the supplier",
+                                            "type": "integer"
+                                        },
+                                        "contract_file": {
+                                            "description": "The file path for the contract file associated with the supplier",
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
                     },
-                    "400": {
-                        "description": "Bad request"
+                    "422": {
+                        "description": "Validation error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Error messsage"
+                                        },
+                                        "errors": {
+                                            "type": "object",
+                                            "example": "Object with all the errors by field"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -1099,11 +1130,21 @@
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/components/schemas/Supplier"
-                                            }
+                                        "name": {
+                                            "description": "The name of the supplier",
+                                            "type": "string"
+                                        },
+                                        "email": {
+                                            "description": "The email address of the supplier",
+                                            "type": "string"
+                                        },
+                                        "max_due_days": {
+                                            "description": "The maximum number of due days allowed for the supplier",
+                                            "type": "integer"
+                                        },
+                                        "contract_file": {
+                                            "description": "The file path for the contract file associated with the supplier",
+                                            "type": "string"
                                         }
                                     },
                                     "type": "object"
@@ -1192,13 +1233,28 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Supplier"
+                                    "properties": {
+                                        "name": {
+                                            "description": "The name of the supplier",
+                                            "type": "string"
+                                        },
+                                        "email": {
+                                            "description": "The email address of the supplier",
+                                            "type": "string"
+                                        },
+                                        "max_due_days": {
+                                            "description": "The maximum number of due days allowed for the supplier",
+                                            "type": "integer"
+                                        },
+                                        "contract_file": {
+                                            "description": "The file path for the contract file associated with the supplier",
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
-                    },
-                    "400": {
-                        "description": "Bad request"
                     },
                     "404": {
                         "description": "Supplier not found",
@@ -1209,6 +1265,26 @@
                                         "message": {
                                             "type": "string",
                                             "example": "Object not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Error messsage"
+                                        },
+                                        "errors": {
+                                            "type": "object",
+                                            "example": "Object with all the errors by field"
                                         }
                                     },
                                     "type": "object"
@@ -1274,6 +1350,11 @@
                     "discount"
                 ],
                 "properties": {
+                    "id": {
+                        "description": "The unique identifier of the customer",
+                        "type": "integer",
+                        "format": "int64"
+                    },
                     "name": {
                         "description": "Full name of the customer",
                         "type": "string"
@@ -1315,6 +1396,11 @@
                     "commission"
                 ],
                 "properties": {
+                    "id": {
+                        "description": "The unique identifier of the partner",
+                        "type": "integer",
+                        "format": "int64"
+                    },
                     "name": {
                         "description": "Full name of the partner",
                         "type": "string"
